micro_ecomm/infra/k8s/microservices/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  ports:
    - port: 5003
      targetPort: 5003
  selector:
    app: order-service
